# o-phim-tv

./: .gitignore  .opencodeignore  README.md  logs.txt  package-lock.json  package.json  server.js
electron/: main.js  main.test.js  preload.js  preload.test.js  updateService.js  updateService.test.js  watchHistoryStore.js  watchHistoryStore.test.js
public/: index.html
scripts/: build-google-tv-apk.cjs  build-google-tv-apk.test.cjs  check-gh-token.js  check-mac-signing.js  clear-electron-builder-xattrs.js  clear-macos-xattrs.js  generate-electron-icon.js  generate-nsis-favicon.js  set-electron-icon.js
src/: App.js  App.scss  App.test.jsx  electronPackaging.test.js  nsisInstaller.test.js  server.test.js  setupTests.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  models.rs
src-tauri/src/commands/: download.rs  mod.rs  navigation.rs  watch_history.rs
src-tauri/src/proxy/: api.rs  mod.rs  playlist.rs  stream.rs
src/api/: tmdbApi.js  tmdbApi.test.js
src/config/: Routes.jsx  Routes.test.jsx
src/context/: FocusContext.jsx  FocusContext.test.jsx
src/hooks/: useThumbnailPreview.js  useThumbnailPreview.test.js  useTvFocus.js
src/pages/: Home.jsx  Home.test.jsx  TvSearch.jsx  TvSearch.test.jsx  tv-search.scss
src/scss/: _breakpoint.scss  tv-focus-style.test.js  tv-focus.scss  tv-variables.scss
src/tauri-bridge/: api.js  index.js  navigation.js  updates.js  watchHistory.js
src/utils/: episodeChunkGroups.js  episodeChunkGroups.test.js  throttle.js  (+7 more)
(+66 files in other folders)
